# --
# Changes of OTRS 
# Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.79.2.6 2003/05/29 23:12:52 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see 
# the enclosed file COPYING for license information (GPL). If you 
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
1.1.2 (2003-05-31)
 - (2003/05/30) added "PerlInitHandler Apache::Reload" (Reload %INC files
    - perl modules) when updated on disk to scripts/apache2-httpd.include.conf
 - (2003/05/30) added "PerlInitHandler Apache::StatINC" (Reload %INC files
    - perl modules) when updated on disk to scripts/apache-httpd.include.conf
 - (2003/05/29) fixed create ticket (without priority selection) via 
    customer panel and changed priority names.
 - (2003/05/26) fixed pic.pl bug - http://bugs.otrs.org/show_bug.cgi?id=149
 - (2003/05/19) improved text formatting of "long" messages in QueueView
    TicketZoom, TicketPlain and TicketSearch
 - (2003/05/18) fixed small logic bugs in Kernel/System/PostMaster*
    improved debug options for bin/PostMaster.pl and bin/PostMasterPOP3.pl
     -=> just used -d1 (1-3) for debug level of Kernel/System/PostMaster*
 - (2003/05/18) added customer data lookup for PostMaster*.pl based on
    senders email address (set customer id and customer user)
 - (2003/05/13) fixed unwanted ticket unlock on move
 - (2003/05/13) added russian translation! Thanks to Serg V Kravchenko!
 - (2003/05/13) added config options for shown customer info size
    $Self->{ShowCustomerInfo(Zoom|Queue|Phone)MaxSize}
 - (2003/05/08) fixed ignored user comment in admin area
 - (2003/05/04) added missing StateUpdate (table ticket_history_type) 
    to scripts/DBUpdate-to-1.1.postgresql.sql
 - (2003/05/02) removed unique option for the pop3_account column
    login! To be able to have more pop3 accounts with the same 
    login name. 
 - (2003/05/01) fixed Kernel/System/AuthSession/*.pm to be able 